--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,3 +1,9 @@
+<div class="cover mb-4 d-flex align-items-center justify-content-center">
+  <div class="text-center text-white">
+    <h1>All cars.</h1>
+    <h3 class="typed-js"></h3>
+  </div>
+</div>
 <div class="container-fluid">
   <div class="row justify-content-center">
     <% @cars.each do |car| %>
