--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,42 @@
-// Specific CSS for your home-page
+.banner {
+  background-size: cover;
+  background-position: center;
+  height:90vh;
+  padding: 150px 0;
+  margin-bottom: 30px;
+}
+
+.banner h1 {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.banner p {
+  font-size: 20px;
+  color: white;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}// Specific CSS for your home-page
+.card {
+  img {
+    height:120px;
+    margin-bottom:8px;
+  }
+  text-align: center;
+  border: 1px solid lightgrey;
+  width: 300px;
+  border-radius:5px;
+}
+.cards {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+
+}
+.details {
+  height:40vh;
+  padding-bottom: 30px;
+}
