--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -5,8 +5,8 @@
         <h3>Make a booking for <%= @car.model %></h3>
         <%= simple_form_for [@car, @booking] do |f| %>
           <%= f.input :location, placeholder: 'address' %>
-          <%= f.input :start_date, placeholder: 'start-date' %>
-          <%= f.input :end_date, placeholder: 'end-date' %>
+          <%= f.input :start_date, as: :date, html5: true %>
+          <%= f.input :end_date, as: :date, html5: true %>
           <%= @car.make %>
           <%= @car.model %>
           <%= @car.url %>
