--- a/app/views/cars/my_cars.html.erb
+++ b/app/views/cars/my_cars.html.erb
@@ -1,27 +1,33 @@
 <div class="container">
   <h1>Hi <%= current_user.first_name %>, here are your cars</h1>
-  <ul>
+  <ul class="list-group">
     <% @cars.each do |car| %>
-      <li>
-        <div class="card">
-          <div class="row no-gutters">
-            <div class="col-sm-5">
-              <img src="#" alt="Car Image" class="card-img">
-            </div>
-            <div class="col-sm-7">
-              <div class="card-body">
-                <h5 class="card-title"><%= "#{car.make}/#{car.model}" %></h5>
-                <div>
-                    <!-- Font Awsome Row of buttons? Edit, Delete, View bookings -->
-                </div>
-                <div>
-                  <div><p>Created at: <%= car.created_at %></p></div>
-                  <div><p>Last Updated: <%= car.updated_at %></p></div>
-                </div>
+    <% last_updated = car.updated_at.strftime("%Y:%m:%d") %>
+    <% created_date = car.created_at.strftime("%Y:%m:%d") %>
+      <li class="list-group-item">
+        <!-- <div class="card"> -->
+        <div class="row no-gutters">
+          <div class="col-sm-5">
+            <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80 750w" alt="Car Image" style="width:100%;">
+          </div>
+          <div class="col-sm-7">
+            <div class="card-body">
+              <h5 class="card-title"><%= "#{car.make} - #{car.model}" %></h5>
+              <div>
+                <!-- Font Awsome Row of buttons? Edit, Delete, View bookings -->
               </div>
             </div>
           </div>
         </div>
+        <div class="row no-gutters justify-content-evenly">
+          <div class="col">
+            <p>Updated: <%= last_updated %></p>
+          </div>
+          <div class="col">
+            <p>Creaded: <%= created_date %></p>
+          </div>
+        </div>
+        <!-- </div> -->
       </li>
     <% end %>
   </ul>
