--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active">
-          <%= link_to "My Cars", cars_my_cars_path , class: "nav-link" %>
+          <%= link_to "My Cars", my_cars_cars_path , class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Bookings", "#", class: "nav-link" %>
