--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1> Caravan - Rent the <strong>car</strong> of your dreams </h1>
     <p>Find a car quickly for your last minute trips</p>
-    <a class="btn btn-flat" href="#">Browse a car</a>
+    <%= link_to 'Browse a car', cars_path, class: 'btn btn-flat' %>
   </div>
 </div>
 <div class="container details">
