--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -19,7 +19,8 @@
           </li>
           <div class="btn-group" role="group">
             <%= link_to 'Book', new_car_booking_path(@car), class: 'btn btn-success' %>
-            <% if current_user.id == @car.user_id %>
+            
+            <% if user_signed_in? && current_user.id == @car.user_id %>
               <%= link_to 'Edit', edit_car_path(@car), class: 'btn btn-warning' %>
               <%= link_to 'Detete', car_path(@car), class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure you want to delete this car!?' } %>
             <% end %>
