--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -1,3 +1,18 @@
-<h1>Edit / Update Car Page</h1>
-<p>Form that preloads the current values</p>
-
+<div class="container py-5">
+  <div class="row">
+    <div class="col-12 col-md-6 offset-lg-3">
+      <div class="bg-white rounded p-3 shadow">
+        <h3>Create a new Car</h3>
+        <%= simple_form_for @car do |f| %>
+          <%= f.input :model, placeholder: 'model' %>
+          <%= f.input :make, placeholder: 'make' %>
+          <%= f.input :location, placeholder: 'location' %>
+          <%= f.input :reg_number, placeholder: 'reg_no' %>
+          <%= f.input :car_url, placeholder: 'car_url' %>
+          <%= f.input :price, placeholder: 'price' %>
+          <%= f.submit class: 'btn btn-flat' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
