--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -4,12 +4,16 @@
       <div class="bg-white rounded p-3 shadow">
         <h3>Create a new Car</h3>
         <%= simple_form_for @car do |f| %>
-          <%= f.input :model, placeholder: 'model' %>
-          <%= f.input :make, placeholder: 'make' %>
-          <%= f.input :location, placeholder: 'location' %>
-          <%= f.input :reg_number, placeholder: 'reg_no' %>
-          <%= f.input :car_url, placeholder: 'car_url' %>
-          <%= f.input :price, placeholder: 'price' %>
+          <%= f.input :make, placeholder: 'Vauxhall' %>
+          <%= f.input :model, placeholder: 'Corsa' %>
+          <%= f.input :location, placeholder: 'PostCode / Zip Code' %>
+          <%= f.input :reg_number, placeholder: 'DF03-TTT' %>
+          <%= f.input :car_url, label: "Car Photos", as: :file, input_html: { multiple: true } %>
+          <%= f.input :price, placeholder: 'Price' %>
+          <%= f.input :description, placeholder: 'Description' %>
+          <%= f.input :transmission, placeholder: 'Automatic/ Manual' %>
+          <%= f.input :fuel_type, placeholder: 'Petrol / Gas ..' %>
+          <%= f.input :seats, placeholder: '5' %>
           <%= f.submit class: 'btn btn-flat' %>
         <% end %>
       </div>
