--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,32 +1,54 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
     <div>
-      <img src="https://images.pexels.com/photos/3226806/pexels-photo-3226806.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=311&w=250" alt="Mini Cooper">
-      <div class="card-body">
-        <h5 class="card-title"><%= "#{@car.make} - #{@car.model}" %></h5>
-        <ul>
-          <li>
-            <p class="card-text"><%= @car.price %></p>
-          </li>
-          <li>
-            <p class="card-text"><%= @car.fuel_type %></p>
-          </li>
-          <li>
-            <p class="card-text"><%= @car.transmission %></p>
-          </li>
-          <li>
-            <p class="card-text"><%= @car.seats %></p>
-          </li>
-          <div class="btn-group" role="group">
-            <%= link_to 'Book', new_car_booking_path(@car), class: 'btn btn-success' %>
-            
-            <% if user_signed_in? && current_user.id == @car.user_id %>
-              <%= link_to 'Edit', edit_car_path(@car), class: 'btn btn-warning' %>
-              <%= link_to 'Detete', car_path(@car), class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure you want to delete this car!?' } %>
-            <% end %>
-          </div>
-        </ul>
+      <!-- Bootstrap Carousel -->
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <% photo_id = 0 %>
+          <% @car.car_url.each do |photo| %>
+            <div class="carousel-item">
+              <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill, class: 'd-block w-100' %>
+            </div>
+          <% end %>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <script>
+          const carousel = document.querySelector('#carouselExampleControls')
+          const carousel_image = carousel.querySelector('.carousel-inner .carousel-item')
+          carousel_image.classList.add('active')
+        </script>
+        <!-- Bootstrap Carousel END-->
+        <div class="card-body">
+          <h5 class="card-title"><%= "#{@car.make} - #{@car.model}" %></h5>
+          <ul>
+            <li>
+              <p class="card-text"><%= @car.price %></p>
+            </li>
+            <li>
+              <p class="card-text"><%= @car.fuel_type %></p>
+            </li>
+            <li>
+              <p class="card-text"><%= @car.transmission %></p>
+            </li>
+            <li>
+              <p class="card-text"><%= @car.seats %></p>
+            </li>
+            <div class="btn-group" role="group">
+              <%= link_to 'Book', new_car_booking_path(@car), class: 'btn btn-success' %>
+              <% if user_signed_in? && current_user.id == @car.user_id %>
+                <%= link_to 'Edit', edit_car_path(@car), class: 'btn btn-warning' %>
+                <%= link_to 'Detete', car_path(@car), class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure you want to delete this car!?' } %>
+              <% end %>
+            </div>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
