--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,9 @@
 
 // For example:
 $red: #FD1015;
-$blue: #167FFB;
+$blue: #66fcf1;
 $yellow: #FFC65A;
-$orange: #E67E22;
+$orange: #ee5622;
 $green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$gray: #c5c6c7;
+$light-gray: #0b0c10;
