--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,27 +1,28 @@
 .footer {
-  background: #F4F4F4;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
-
+  color: #66fcf1;
 }
+
 .footer-links {
   display: flex;
   align-items: center;
 }
+
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: #66fcf1;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
 }
+
 .footer-links a:hover {
-  opacity: 1;
+  color: orange;
 }
+
 .footer .fa-heart {
   color: #D23333;
 }
