--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,32 +1,23 @@
-<div class="container-fluid">
+<div class="container-fluid justify-content-center">
   <div class="row justify-content-center">
-    <div>
-      <img src="https://images.pexels.com/photos/3226806/pexels-photo-3226806.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=311&w=250" alt="Mini Cooper">
+    <img src="https://images.pexels.com/photos/3226806/pexels-photo-3226806.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=311&w=250" alt="Mini Cooper">
+    
       <div class="card-body">
         <h5 class="card-title"><%= "#{@car.make} - #{@car.model}" %></h5>
-        <ul>
-          <li>
-            <p class="card-text"><%= @car.price %></p>
-          </li>
-          <li>
-            <p class="card-text"><%= @car.fuel_type %></p>
-          </li>
-          <li>
-            <p class="card-text"><%= @car.transmission %></p>
-          </li>
-          <li>
-            <p class="card-text"><%= @car.seats %></p>
-          </li>
-          <div class="btn-group" role="group">
-            <%= link_to 'Book', new_car_booking_path(@car), class: 'btn btn-success' %>
-            
-            <% if user_signed_in? && current_user.id == @car.user_id %>
-              <%= link_to 'Edit', edit_car_path(@car), class: 'btn btn-warning' %>
-              <%= link_to 'Detete', car_path(@car), class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure you want to delete this car!?' } %>
-            <% end %>
-          </div>
-        </ul>
+        <p class="card-text"><%=@car.description%></p>
+        <p class="card-text">£<%= @car.price %> per day</p>
+        <p class="card-text"><%= @car.seats %> seats</p>
+        <p class="card-text"><small class="text-muted">Listing created on <%=@car.created_at%></small></p>
+      
+        <div class="btn-group" role="group">
+          <%= link_to 'Book', new_car_booking_path(@car), class: 'btn btn-success' %>
+          
+          <% if user_signed_in? && current_user.id == @car.user_id %>
+            <%= link_to 'Edit', edit_car_path(@car), class: 'btn btn-warning' %>
+            <%= link_to 'Detete', car_path(@car), class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure you want to delete this car!?' } %>
+          <% end %>
+        </div>
       </div>
-    </div>
+    
   </div>
 </div>
