--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-lewagon">
   <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "car.png" %>
+    <%= image_tag "logo-blue.png" %>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,11 +10,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "BROWSE CARS", cars_path, class: "nav-link" %>
+        </li>
         <li class="nav-item active">
-          <%= link_to "My Cars", my_cars_cars_path, class: "nav-link" %>
+          <%= link_to "MY CARS", my_cars_cars_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Bookings", my_bookings_path, class: "nav-link" %>
+          <%= link_to "MY BOOKINGS", my_bookings_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://w7.pngwing.com/pngs/749/780/png-transparent-female-avatar-cartoon-user-avatar-purple-face-heroes.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
@@ -26,7 +29,10 @@
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <%= link_to "BROWSE CARS", cars_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "LOGIN", new_user_session_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
