Add bit of color to backgrond

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,13 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+// global styling
+
+.body-dark-theme {
+  background-color: $dark-navy;
+}
+
+.body-light-theme {
+  background-color: $light-grey;
+}
