--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -8,9 +8,9 @@
 <div class="container-fluid">
   <div class="row">
     <% @cars.each do |car| %>
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 col-xxl-1">
-        <div class="our-card card m-2 border-0">
-          <img class="card-img-top rounded-top" src="https://images.pexels.com/photos/3226806/pexels-photo-3226806.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=311&w=250" alt="Mini Cooper">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 col-xxl-1 mt-5 text-center">
+        <div class="our-card card m-auto border-0">
+          <img class="card-img-top rounded-top" style="height:175px;" src="https://images.pexels.com/photos/3226806/pexels-photo-3226806.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=311&w=250" alt="Mini Cooper">
           <div class="d-flex justify-content-around">
             <p class="card-text">£<%= car.price %> per day</p>
             <p class="card-text"><%= car.seats %> seats</p>
