Added seats icon

--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -13,7 +13,7 @@
           <img class="card-img-top rounded-top" style="height:175px;" src="https://images.pexels.com/photos/3226806/pexels-photo-3226806.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=311&w=250" alt="Mini Cooper">
           <div class="d-flex justify-content-around">
             <p class="card-text">£<%= car.price %> per day</p>
-            <p class="card-text"><%= car.seats %> seats</p>
+            <p class="card-text"><%= car.seats %> <i class="fas fa-chair"></i></p>
           </div>
           <div class="card-body">
             <h5 class="card-title"><%= "#{car.make} - #{car.model}" %></h5>
