--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -33,7 +33,8 @@
         <p class="card-text"><%= @car.seats %> seats</p>
         <p class="card-text"><small class="text-muted">Listing created on <%=@car.created_at%></small></p>
         <div class="btn-group" role="group">
-          <%= link_to 'Book', new_car_booking_path(@car), class: 'btn btn-success' %>
+        <a href="<%=new_car_booking_path(@car)%>"><i class="far fa-calendar-check book-btn"></i></a>
+          
           <% if user_signed_in? && current_user.id == @car.user_id %>
             <%= link_to 'Edit', edit_car_path(@car), class: 'btn btn-warning' %>
             <%= link_to 'Detete', car_path(@car), class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure you want to delete this car!?' } %>
