--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -1,6 +1,6 @@
 .text-container-dark {
   background-color: #16151C;
-  width: 500px;
+  width: 100%;
   height: 100%;
   border: 5px #000000 solid;
   border-radius: 15px;
