--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -30,14 +30,14 @@
         <h5 class="card-title"><%= "#{@car.make} - #{@car.model}" %></h5>
         <p class="card-text"><%=@car.description%></p>
         <p class="card-text">£<%= @car.price %> per day</p>
-        <p class="card-text"><%= @car.seats %> seats</p>
+        <p class="card-text"><%= @car.seats %> <i class="fas fa-chair"></i></p>
         <p class="card-text"><small class="text-muted">Listing created on <%=@car.created_at%></small></p>
-        <div class="btn-group" role="group">
-        <a href="<%=new_car_booking_path(@car)%>"><i class="far fa-calendar-check book-btn"></i></a>
-          
+        <div class="btn-group" role="group">          
           <% if user_signed_in? && current_user.id == @car.user_id %>
-            <%= link_to 'Edit', edit_car_path(@car), class: 'btn btn-warning' %>
-            <%= link_to 'Detete', car_path(@car), class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure you want to delete this car!?' } %>
+            <a href="<%=edit_car_path(@car)%>"><i class="far fa-edit edit-btn"></i></a>
+            <%= link_to '', car_path(@car), class: 'far fa-trash-alt delete-btn', method: :delete, data: { confirm: 'Are you sure you want to delete this car!?' } %>
+          <% else %>
+            <a href="<%=new_car_booking_path(@car)%>"><i class="far fa-calendar-check book-btn"></i></a>
           <% end %>
         </div>
       </div>
