Updated book button on hover and actvie to show green

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -21,3 +21,14 @@
   font-size: 52px;
   margin: 0 5px;
 }
+.book-btn:hover, .edit-btn:hover {
+  color: rgb(51, 255, 0);
+}
+
+.book-btn:active, .edit-btn:active {
+  color: orange;
+}
+
+.delete-btn:active, .delete-btn:hover {
+  color: red;
+}
