--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -1,5 +1,5 @@
 .text-container-dark {
-  background-color: #16151C;
+  background-color: $dark-violet;
   width: 100%;
   height: 100%;
   border: 5px #000000 solid;
