--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,8 @@
   justify-content: space-between;
   font-size: 18px;
   padding: 18px;
+  width: 100%;
+  background-color: $dark-navy
 }
 
 .navbar-lewagon .navbar-collapse {
