--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -3,7 +3,7 @@
   <ul class="list-group">
     <% @bookings.each do |booking| %>
       <% last_updated = booking.updated_at.strftime("%Y-%m-%d %H:%M:%S") %>
-      <li class="list-group-item m-2">
+      <li class="list-group-item m-2 list-body-dark">
         <!-- <div class="card"> -->
         <div class="row">
           <div class="col-sm-5">
