--- a/app/views/cars/my_cars.html.erb
+++ b/app/views/cars/my_cars.html.erb
@@ -3,7 +3,7 @@
   <ul class="list-group">
     <% @cars.each do |car| %>
       <% last_updated = car.updated_at.strftime("%Y-%m-%d %H:%M:%S") %>
-      <li class="list-group-item m-2">
+      <li class="list-group-item m-2 list-body-dark">
         <div class="row">
           <div class="col-sm-5">
             <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80 750w" alt="Car Image" style="width:100%;">
@@ -23,10 +23,10 @@
             <p class="list-updated text-muted">Last Updated: <%= last_updated %></p>
           </div>
           <div class="col-12">
-            <div class="row justify-content-around">
-              <div class="list-button"><a href="/cars/<%=car.id%>"><i class="far fa-eye"></i></a></div>
-              <div class="list-button"><a href="/cars/<%=car.id%>/edit"><i class="far fa-edit"></i></a></div>
-              <div class="list-button"><a href="/cars/<%=car.id%>/destroy"><i class="far fa-trash-alt"></i></a></div>
+            <div class="row justify-content-around align-content-center">
+              <div class="list-button"><a href="/cars/<%=car.id%>"><i class="far fa-eye book-btn my-pages-action-btn"></i></a></div>
+              <div class="list-button"><a href="/cars/<%=car.id%>/edit"><i class="far fa-edit edit-btn my-pages-action-btn"></i></a></div>
+              <div class="list-button"><a href="/cars/<%=car.id%>/destroy"><i class="far fa-trash-alt delete-btn my-pages-action-btn"></i></a></div>
             </div>
           </div>
         </div>
