Removed description from cars#html cars with key details and placeholder for reviews

--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -21,3 +21,9 @@
 .list-body-dark {
   background-color: $dark-violet;
 }
+
+.card-car-detail {
+  text-decoration: none;
+  list-style: none;
+  padding: 0;
+}
