cars#show Image border

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -22,7 +22,7 @@
       </div>
       <!-- Bootstrap Carousel END-->
     <% else %>
-      <img class="car-show-image" src="https://images.pexels.com/photos/3226806/pexels-photo-3226806.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=311&w=250" alt="Mini Cooper">
+      <img class="car-show-image shadow" src="https://images.pexels.com/photos/3226806/pexels-photo-3226806.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=311&w=250" alt="Mini Cooper">
     <% end %>
     </div>
     <div class="col-xs-1 col-l-6 m-auto shadow" style="min-width:300px;">
