--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -9,6 +9,8 @@
 
 .car-show-image {
   height: fit-content;
+  border-radius: 10px;
+  border: 2px grey solid;
 }
 
 @media only screen and (max-width: 1000px) {
