added search function

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -9,7 +9,7 @@
           <%= f.input :end_date, as: :date, html5: true %>
           <%= @car.make %>
           <%= @car.model %>
-          <%= f.submit class: 'btn btn-flat' %>
+          <%= f.submit class: 'btn btn-primary' %>
         <% end %>
       </div>
     </div>
