--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,3 +1,8 @@
 .form-container-dark {
+  color: #ffffff;
+  background-color: #2A2631;
+}
 
+.form_placeholder::placeholder {
+  color: #BEC4C8;
 }
