--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,15 +1,15 @@
 <div class="container py-5">
   <div class="row">
     <div class="col-12 col-md-6 offset-lg-3">
-      <div class="bg-white rounded p-3 shadow">
-        <h3>Make a booking for <%= @car.model %></h3>
+      <div class="rounded p-3 shadow form-container-dark">
+        <h3>Make a booking for <%= "#{@car.make} #{@car.model}" %></h3>
         <%= simple_form_for [@car, @booking] do |f| %>
-          <%= f.input :location, placeholder: 'address' %>
+          <%= f.input :location, placeholder: 'address', input_html: {class: 'form_placeholder'} %>
           <%= f.input :start_date, as: :date, html5: true %>
           <%= f.input :end_date, as: :date, html5: true %>
-          <%= @car.make %>
-          <%= @car.model %>
-          <%= f.submit class: 'btn btn-flat' %>
+          <div class="d-flex justify-content-center">
+            <%= f.submit class: 'btn btn-flat' %>
+          </div>
         <% end %>
       </div>
     </div>
