--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
       <%= text_field_tag :query,
         params[:query],
         class: "form-control",
-        placeholder: "Search for a car by location, model, or number of seats"
+        placeholder: "Search for a car by location, make or model"
       %>
       <br>
       <%= submit_tag "Search", class: "btn btn-primary" %>
