--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -20,7 +20,7 @@
               <%= f.input :reg_number, placeholder: 'DF03-TTT', input_html: {class: 'form_placeholder'} %>
             </div>
             <div class="mx-1 flex-fill">
-              <%= f.input :price, placeholder: 'Price', input_html: {class: 'form_placeholder'} %>
+              <%= f.input :price, placeholder: '250', input_html: {class: 'form_placeholder'} %>
             </div>
           </div>
           <div class="mx-1">
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div class="mx-1">
-            <%= f.input :description, placeholder: 'Description', input_html: {class: 'form_placeholder'} %>
+            <%= f.input :description, placeholder: 'A small family car, ideal for city breaks...', input_html: {class: 'form_placeholder'} %>
           </div>
           <div class="mx-1">
             <%= f.input :car_url, label: "Car Photos", as: :file, input_html: { multiple: true } %>
