--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -1,20 +1,48 @@
 <div class="container py-5">
   <div class="row">
     <div class="col-12 col-md-6 offset-lg-3">
-      <div class="bg-white rounded p-3 shadow">
+      <div class="rounded p-3 shadow form-container-dark">
         <h3>Edit the Car</h3>
         <%= simple_form_for @car do |f| %>
-          <%= f.input :make, placeholder: 'Vauxhall' %>
-          <%= f.input :model, placeholder: 'Corsa' %>
-          <%= f.input :location, placeholder: 'PostCode / Zip Code' %>
-          <%= f.input :reg_number, placeholder: 'DF03-TTT' %>
-          <%= f.input :car_url, label: "Car Photos", as: :file, input_html: { multiple: true } %>
-          <%= f.input :price, placeholder: 'Price' %>
-          <%= f.input :description, placeholder: 'Description' %>
-          <%= f.input :transmission, placeholder: 'Automatic/ Manual' %>
-          <%= f.input :fuel_type, placeholder: 'Petrol / Gas ..' %>
-          <%= f.input :seats, placeholder: '5' %>
-          <%= f.submit class: 'btn btn-flat' %>
+          <div class="d-flex justify-content-between">
+            <div class="mx-1 flex-fill">
+              <%= f.input :make, placeholder: 'Vauxhall', input_html: {class: 'form_placeholder'} %>
+            </div>
+            <div class="mx-1 flex-fill">
+              <%= f.input :model, placeholder: 'Corsa', input_html: {class: 'form_placeholder'} %>
+            </div>
+          </div>
+          <div class="mx-1">
+            <%= f.input :location, placeholder: 'PostCode / Zip Code', input_html: {class: 'form_placeholder'} %>
+          </div>
+          <div class="d-flex justify-content-between">
+            <div class="mx-1 flex-fill">
+              <%= f.input :reg_number, placeholder: 'DF03-TTT', input_html: {class: 'form_placeholder'} %>
+            </div>
+            <div class="mx-1 flex-fill">
+              <%= f.input :price, placeholder: '250', input_html: {class: 'form_placeholder'} %>
+            </div>
+          </div>
+          <div class="mx-1">
+            <%= f.input :seats, placeholder: '5', input_html: {class: 'form_placeholder'} %>
+          </div>
+          <div class="d-flex justify-content-between">
+            <div class="mx-3 flex-fill">
+              <%= f.input :fuel_type, as: :radio_buttons, collection: ["Petrol", "Diesel", "Gas"] %>
+            </div>
+            <div class="mx-3 flex-fill">
+              <%= f.input :transmission, as: :radio_buttons, collection: ["Manual", "Automatic"] %>
+            </div>
+          </div>
+          <div class="mx-1">
+            <%= f.input :description, placeholder: 'A small family car, ideal for city breaks...', input_html: {class: 'form_placeholder'} %>
+          </div>
+          <div class="mx-1">
+            <%= f.input :car_url, label: "Car Photos", as: :file, input_html: { multiple: true } %>
+          </div>
+          <div class="d-flex justify-content-center">
+            <%= f.submit class: 'btn btn-flat' %>
+          </div>
         <% end %>
       </div>
     </div>
