--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,17 @@
 .banner {
   background-size: cover;
   background-position: center;
-  height:90vh;
+  height:80vh;
+  width:237%;
   padding: 150px 0;
   margin-bottom: 30px;
 }
-
+.container-banner{
+  margin-left: 50px;
+}
+.flex-item-grow{
+  flex: 1 auto;
+}
 .banner h1 {
   margin: 0;
   color: white;
@@ -22,23 +28,23 @@
 }// Specific CSS for your home-page
 .card {
   img {
-    height:120px;
-    margin-bottom:8px;
+    height:70px;
+    margin-bottom:3px;
   }
   text-align: center;
   border: 1px solid lightgrey;
-  width: 300px;
+  width: auto;
   border-radius:5px;
 }
 .cards {
-  display: flex;
+  // display: flex;
   justify-content: space-around;
-  margin-top: 30px;
+  margin-top: 10px;
 
 }
 .details {
-  height:40vh;
-  padding-bottom: 30px;
+  height:35vh;
+  padding-bottom: 20px;
 }
 .avatar {
   width: 40px;
