Updated Cars Form to include more required fields, also added a few more icons

--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -32,9 +32,9 @@
             <div class="row">
               <div class="col">
                 <ul class="m-0" style="padding:0;text-align-left">
-                  <li class="card-text card-car-detail">£<%= car.price %> per day</li>
+                  <li class="card-text card-car-detail">£<%= car.price %> <i class="fas fa-calendar-day"></i></li>
                   <li class="card-text card-car-detail"><%= car.seats %> <i class="fas fa-chair"></i></li>
-                  <li class="card-text card-car-detail"><%= car.location%></li>
+                  <li class="card-text card-car-detail"><%= car.postal_code%> <i class="fas fa-map-marker-alt"></i></li>
                 </ul>
               </div>
             </div>
