--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -19,6 +19,11 @@
   }
 }
 
+.car-show-map-detail {
+  width: 100%;
+  height: 100%;
+}
+
 // used in my_cars and my_bookings
 .list-body-dark {
   background-color: $dark-violet;
@@ -29,3 +34,4 @@
   list-style: none;
   padding: 0;
 }
+
