--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -22,6 +22,13 @@
             </div>
           </div>
           <!-- Bootstrap Carousel END-->
+          <script>
+            carousel = document.querySelector('#carouselExampleControls')
+            carousel_image = carousel.querySelector('.carousel-inner .carousel-item')
+            if(carousel_image){
+              carousel_image.classList.add('active')
+            }
+          </script>
         <% else %>
           <img class="car-show-image shadow" src="https://images.pexels.com/photos/3226806/pexels-photo-3226806.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=311&w=250" alt="Mini Cooper">
         <% end %>
@@ -47,15 +54,16 @@
       </div>
     </div>
     <div class="col-xs-1 col-6 car-show-map">
-      hhhhhhhhhhhhhhhhhhhhhh
+    <div id="map" class="car-show-map-detail"style="height:600px;width:500px;"></div>
+    <script>	mapboxgl.accessToken = '<%= ENV['MAPBOX_API_KEY'] %>';
+      const map = new mapboxgl.Map({
+      container: 'map', // container ID
+      style: 'mapbox://styles/mapbox/streets-v11', // style URL
+      center: ["<%=@car.longitude%>", "<%=@car.latitude%>"], // starting position [lng, lat]
+      zoom: 15 // starting zoom
+      });
+    </script>
     </div>
   </div>
-  <script>
-    carousel = document.querySelector('#carouselExampleControls')
-    carousel_image = carousel.querySelector('.carousel-inner .carousel-item')
-    if(carousel_image){
-      carousel_image.classList.add('active')
-    }
-  </script>
 </div>
 </div>
