changed search form to be inline

--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -1,5 +1,5 @@
 .text-container-dark {
-  background-color: $dark-violet;
+  background-color: #2A2631;
   width: 100%;
   height: 100%;
   border: 5px #000000 solid;
@@ -21,7 +21,7 @@
 
 // used in my_cars and my_bookings
 .list-body-dark {
-  background-color: $dark-violet;
+  background-color: #2A2631;
 }
 
 .card-car-detail {
