--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,7 @@
 .banner {
   background-size: cover;
+  color: whitesmoke;
+
   background-position: center;
   height:90vh;
   padding: 150px 0;
@@ -8,18 +10,17 @@
 
 .banner h1 {
   margin: 0;
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-shadow: 1px 1px 3px #08070A;
   font-size: 32px;
   font-weight: bold;
 }
 
 .banner p {
   font-size: 20px;
-  color: white;
   opacity: .7;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-}// Specific CSS for your home-page
+  text-shadow: 1px 1px 3px #08070A;
+}
+
 .card {
   img {
     height:120px;
@@ -30,16 +31,19 @@
   width: 300px;
   border-radius:5px;
 }
+
 .cards {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
 
 }
+
 .details {
   height:40vh;
   padding-bottom: 30px;
 }
+
 .avatar {
   width: 40px;
   border-radius: 50%;
