--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -8,7 +8,7 @@
           <%= f.input :start_date, as: :date, html5: true %>
           <%= f.input :end_date, as: :date, html5: true %>
           <div class="d-flex justify-content-center">
-            <%= f.submit class: 'btn btn-flat' %>
+            <%= f.submit class: 'btn btn-primary' %>
           </div>
         <% end %>
       </div>
