--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,14 +4,14 @@
     <!-- <h1> Caravan - Rent the <strong>car</strong> of your dreams </h1> -->
     <br>
     <p class="animate__animated animate__backInLeft">Find a car for your last minute trips</p>
-    <%= form_tag cars_path, method: :get do %>
+    <%= form_tag cars_path, class: "form-inline", method: :get do %>
       <%= text_field_tag :query,
         params[:query],
-        class: "form-control",
+        class: "form-control col-md-6",
         placeholder: "Search for a car by location, make or model"
       %>
       <br>
-      <%= submit_tag "Search", class: "btn btn-primary" %>
+      <%= submit_tag "Search", class: "btn btn-primary ml-2" %>
     <% end %>
     <br>
     <%= link_to 'Browse all cars', cars_path, class: 'btn btn-primary' %>
