changed index card so user can book without having to go to show page first

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,15 +21,15 @@
 <div class="container details">
   <h2 class="text-center"> How it Works </h2>
   <div class="cards">
-    <div class="card">
+    <div class="card our-card">
       <%= image_tag "driver.svg", alt: "alttext" %>
       <h3>Search for a car</h3>
     </div>
-    <div class="card">
+    <div class="card our-card">
       <%= image_tag "order.svg", alt: "alttext" %>
       <h3>Create your booking</h3>
     </div>
-    <div class="card">
+    <div class="card our-card">
       <%= image_tag "car.svg", alt: "alttext" %>
       <h3>Enjoy your trip</h3>
     </div>
