--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -36,6 +36,6 @@
     <%= f.input :car_url, label: "Car Photos", as: :file, input_html: { multiple: true } %>
   </div>
   <div class="d-flex justify-content-center">
-    <%= f.submit class: 'btn btn-flat' %>
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
