--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -19,9 +19,16 @@
   }
 }
 
+.car-show-map {
+  padding: 50px 50px 50px 50px;
+}
+
 .car-show-map-detail {
   width: 100%;
   height: 100%;
+  border-radius: 15px;
+  border: solid black 5px;
+
 }
 
 // used in my_cars and my_bookings
