--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid justify-content-center">
   <div class="row justify-content-center">
-    <div class="col-xs-1 col-6 m-auto shadow text-center">
+    <div class="col-xs-1 col-6 m-auto text-center">
       <div class="row justify-content-center">
         <% if !@car.car_url.empty? # only add carousel if custom images have been uploaded%>
           <!-- Bootstrap Carousel -->
@@ -30,7 +30,7 @@
             }
           </script>
         <% else %>
-          <img class="car-show-image shadow" src="https://images.pexels.com/photos/3226806/pexels-photo-3226806.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=311&w=250" alt="Mini Cooper">
+          <img class="car-show-image" src="https://images.pexels.com/photos/3226806/pexels-photo-3226806.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=311&w=250" alt="Mini Cooper">
         <% end %>
       </div>
       <div class="row justify-content-center mt-2">
@@ -54,14 +54,19 @@
       </div>
     </div>
     <div class="col-xs-1 col-6 car-show-map">
-    <div id="map" class="car-show-map-detail"style="height:600px;width:500px;"></div>
+    <div id="map" class="car-show-map-detail"></div>
     <script>	mapboxgl.accessToken = '<%= ENV['MAPBOX_API_KEY'] %>';
       const map = new mapboxgl.Map({
       container: 'map', // container ID
-      style: 'mapbox://styles/mapbox/streets-v11', // style URL
+      style: 'mapbox://styles/jakem93/cks4h3d3m4obr17q6tm5vm4td', // style URL
       center: ["<%=@car.longitude%>", "<%=@car.latitude%>"], // starting position [lng, lat]
       zoom: 15 // starting zoom
       });
+
+      const marker1 = new mapboxgl.Marker({color: 'black'})
+        .setLngLat(["<%=@car.longitude%>", "<%=@car.latitude%>"])
+        .addTo(map);
+      map.addControl(new mapboxgl.FullscreenControl());
     </script>
     </div>
   </div>
