--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -7,15 +7,16 @@
         <!-- <div class="card"> -->
         <div class="row">
           <div class="col-sm-5">
-            <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80 750w" alt="Car Image" style="width:100%;">
+            <%= cl_image_tag Car.find(booking.car_id).photos[0].key, class: "card-img-top rounded-top", style: "height:175px;", alt: "alttext" %>
           </div>
           <div class="col-sm-7">
             <div class="card-body">
-              <h5 class="card-title"><%= "#{booking.location} - #{Car.find(booking.car_id).make} : #{booking.start_date}" %></h5>
-              <div class="card-text">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                <!-- Font Awsome Row of buttons? Edit, Delete, View bookings -->
-              </div>
+              <h5>You booked <%= "#{Car.find(booking.car_id).make} - #{Car.find(booking.car_id).model}" %>:</h5>
+              <p>Location: <%= booking.location %></p>
+              <p>From: <%= booking.start_date %></p>
+              <p>To: <%= booking.end_date %></p>
+              <p><%= Car.find(booking.car_id).description %></p>
+              <a href="/cars/<%=booking.car_id%>" class="btn btn-primary mb-3">Car Details</a>
             </div>
           </div>
         </div>
