--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -33,7 +33,7 @@
     <%= f.input :description, placeholder: 'A small family car, ideal for city breaks...', input_html: {class: 'form_placeholder'} %>
   </div>
   <div class="mx-1">
-    <%= f.input :car_url, label: "Car Photos", as: :file, input_html: { multiple: true } %>
+    <%= f.input :photo, label: "Car Photos", as: :file, input_html: { multiple: true } %>
   </div>
   <div class="d-flex justify-content-center">
     <%= f.submit class: 'btn btn-primary' %>
