--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -24,7 +24,7 @@
     <% @cars.each do |car| %>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 col-xxl-1 mt-5 text-center">
         <div class="our-card card m-auto border-0">
-          <%= image_tag "#{car[:car_url]}", class: "card-img-top rounded-top", style: "height:175px;", alt: "alttext" %>
+          <%= cl_image_tag car.photos[0].key, class: "card-img-top rounded-top", style: "height:175px;", alt: "alttext" %>
           
           <div class="d-flex justify-content-around">
             <p><%= car.seats %> <i class="fas fa-chair"></i></p>
