--- a/app/views/cars/my_cars.html.erb
+++ b/app/views/cars/my_cars.html.erb
@@ -25,7 +25,7 @@
             <div class="row justify-content-around align-content-center">
               <div class="list-button"><a href="/cars/<%=car.id%>"><i class="far fa-eye book-btn my-pages-action-btn"></i></a></div>
               <div class="list-button"><a href="/cars/<%=car.id%>/edit"><i class="far fa-edit edit-btn my-pages-action-btn"></i></a></div>
-              <div class="list-button"><a href="/cars/<%=car.id%>/destroy"><i class="far fa-trash-alt delete-btn my-pages-action-btn"></i></a></div>
+              <div class="list-button"><a href="/cars/<%=car.id%>" method="delete"><i class="far fa-trash-alt delete-btn my-pages-action-btn"></i></a></div>
             </div>
           </div>
         </div>
