--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -9,14 +9,13 @@
   </div>
 </div>
 <div class="container">
-  <%= form_tag cars_path, class: "form-inline", method: :get do %>
+  <%= form_tag cars_path, class: "box", method: :get do %>
     <%= text_field_tag :query,
       params[:query],
-      class: "form-control col-md-11",
+      class: "box",
       placeholder: "Search for a car by location, make or model"
     %>
-    <br>
-    <%= submit_tag "Search", class: "btn btn-primary ml-2" %>
+    <%= submit_tag "Search", class: "box" %>
   <% end %>
 </div>
 <div class="container-fluid">
@@ -40,8 +39,8 @@
                 <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label> <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label> <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label> <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
               </div>
             </div>
-            <a href="/cars/<%=car.id%>" class="btn btn-primary mb-3">More Details</a>
-            <a href="/cars/<%=car.id%>/bookings/new" class="btn btn-primary mb-3">Book Now</a>
+            <a href="/cars/<%=car.id%>" class="btn btn-box mb-3">More Details</a>
+            <a href="/cars/<%=car.id%>/bookings/new" class="btn btn-box mb-3">Book Now</a>
           </div>
         </div>
       </div>
