--- a/app/views/cars/my_cars.html.erb
+++ b/app/views/cars/my_cars.html.erb
@@ -39,5 +39,5 @@
     <h5>Would you like to create a new listing?</h5>
   <% end %>
   <br>
-  <%= link_to 'List a new car for rent', new_car_path, class: 'btn btn-primary' %>
+  <%= link_to 'List a new car for rent', new_car_path, class: 'btn btn-box' %>
 </div>
