--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,10 +1,8 @@
-<div class="container py-5">
-  <div class="row">
-    <div class="col-12 col-md-6 offset-lg-3">
-      <div class="bg-white rounded p-3 shadow">
-        <h3>Create a new Car</h3>
-        <%= render "form", car: @car %>
-      </div>
-    </div>
+<div class="container text-center booking">
+  <h3>List your Car for rent</h3>
+</div>
+<div class="d-flex justify-content-center">
+  <div class="box-form">
+    <%= render "form", car: @car %>
   </div>
 </div>
