--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,21 @@
 <div class="banner d-flex justify-content-around" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1620812736363-65d1786b039c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2734&q=80);">
-  <div class="container">
+  <div class="container text-center">
     
     <h1 class="animate__animated animate__backInLeft">Caravan - Rent the <strong>car</strong> of your dreams</h1>
     <br>
     <p id="tagline" class="animate__animated animate__backInLeft">Find a car for your last minute trips</p>
-    <%= form_tag cars_path, class: "form-inline", method: :get do %>
+    <%= form_tag cars_path, class: "box", method: :get do %>
       <%= text_field_tag :query,
         params[:query],
-        class: "form-control col-md-8",
+        class: "box",
         placeholder: "Search for a car by location, make or model"
       %>
-      <%= submit_tag "Search", class: "btn btn-primary ml-2" %>
+      <%= submit_tag "Search", class: "box" %>
     <% end %>
     <br>
-    <%= link_to 'Browse all cars', cars_path, class: 'btn btn-primary' %>
-    <%= link_to 'List a car for rent', new_car_path, class: 'btn btn-primary' %>
-    <h1 class="animate__animated animate__backInLeft mt-4">Our latest cars:</h1>
+    <%= link_to 'Browse all cars', cars_path, class: 'btn btn-box' %>
+    <%= link_to 'List a car for rent', new_car_path, class: 'btn btn-box' %>
+    <h5 class="animate__animated animate__backInLeft mt-4">Our latest cars:</h5>
     <div class="d-flex mt-4">
       <% @cars = Car.first(3) %>
       <% @cars.each do |car| %>
@@ -35,8 +35,8 @@
               <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label> <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label> <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label> <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
             </div>
           </div>
-          <a href="/cars/<%=car.id%>" class="btn btn-primary mb-3">More Details</a>
-          <a href="/cars/<%=car.id%>/bookings/new" class="btn btn-primary mb-3">Book Now</a>
+          <a href="/cars/<%=car.id%>" class="btn btn-box mb-3">More Details</a>
+          <a href="/cars/<%=car.id%>/bookings/new" class="btn btn-box mb-3">Book Now</a>
         </div>
       </div>
       <% end %>
